@@ -1,4 +1,8 @@
 2011-09-07  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/Amanda_Device.pl: Check setting a property with an
+	  invalid name.
+
+2011-09-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Device.swg: Do not g_value_unset an uninitialized value.
 
 2011-09-07  Jean-Louis Martineau <martineau@zmanda.com>
